# MSOLSpray-ng

./: .gitignore  README.md  msolspray-ng.py  pyproject.toml  requirements.txt
src/msolspray/: cli.py  core.py  enum.py  notify.py  tor.py  utils.py
