[tool.poetry]
name = "msolspray-ng"
version = "2.0.0"
description = "A password spraying tool for Microsoft Online accounts (Azure/O365)"
authors = ["y0k4i <7395296+y0k4i-1337@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = {extras = ["socks"], version = "^2.27.1"}
fake-useragent = "^0.1.11"
stem = "^1.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
